@@ -13,7 +13,8 @@ this repository contains the full copyright notices and license terms. -->
             <label name="product"/>
             <field name="product"
                 view_ids="purchase.product_view_list_purchase_line"/>
-            <newline/>
+            <label name="product_supplier"/>
+            <field name="product_supplier"/>
             <label name="description"/>
             <field name="description" colspan="3" yexpand="0"/>
             <label name="quantity"/>
