@@ -1,3 +1,4 @@
+* Add product supplier on purchase line
 * Invoice received product instead of purchased product
 
 Version 4.6.0 - 2017-10-30
